--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -41,9 +41,8 @@
         <p class="visitors">Visitors: <span id="replaceme"></span><span id="spinner" class="spinner" style="display:none;"></span></p>
       </div>
     </div>
-
     <nav aria-label="Primary" class="topnav">
-      <a href="index.html">👤 About</a>
+      <a href="index.html">🏠 Home</a>
       <a href="resume.html">📄 Resume</a>
       <a href="https://github.com/zReuben" target="_blank" rel="noopener noreferrer">💻 GitHub</a>
       <a href="https://www.linkedin.com/in/reubenmulholland" target="_blank" rel="noopener noreferrer">🔗 LinkedIn</a>
