--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Reuben Mulholland — Product Leader & Aspiring Cloud Engineer</title>
+  <title>Reuben Mulholland — Cloud Engineer | DevOps | Solutions Architect</title>
 
   <!-- SEO -->
-  <meta name="description" content="Reuben Mulholland — Product Leader & Aspiring Cloud Engineer. Multi-account AWS, IaC, and CI/CD portfolio with promotion pipeline across eng/test/prod." />
+  <meta name="description" content="Cloud Engineer / DevOps / Solutions Architect. I run pipelines, manage multi-account AWS infra as code, enforce guardrails, and accelerate shipping with lower risk." />
 
   <!-- Social -->
   <meta property="og:title" content="Reuben Mulholland — Product Leader & Aspiring Cloud Engineer">
@@ -35,8 +35,8 @@
       <div>
         <h1 class="headline">Reuben Mulholland</h1>
         <p class="roles">
-          <span>Product Leader</span><br>
-          <span>Aspiring Cloud Engineer</span>
+          <span>Cloud Engineer&nbsp;|&nbsp;DevOps&nbsp;|&nbsp;Solutions Architect</span><br>
+          <span class="roles-sub">ex-Product Manager • Applications Engineer</span>
         </p>
         <p class="visitors">Visitors: <span id="replaceme"></span><span id="spinner" class="spinner" style="display:none;"></span></p>
       </div>
@@ -55,6 +55,9 @@
       <p>
         This began as the <strong>Cloud Resume Challenge</strong> and evolved into a production-style, multi-account AWS build. It’s a living portfolio of how I approach architecture, automation, and guardrails: <em>SAM/CloudFormation IaC</em>, <em>GitHub Actions CI/CD</em>, <em>CloudFront/S3</em>, and a <em>serverless API</em> (API Gateway → Lambda → DynamoDB).
       </p>
+      <p class="hm-orient">
+        This mirrors how cloud-native teams safely promote changes into production—cost control, strong defaults for security, and rapid rollback. It’s the same foundation I’d bring to a SaaS or cloud engineering team to ship faster with less risk.
+      </p>
     </section>
 
     <section class="section">
@@ -67,6 +70,15 @@
         <li><strong>Full IaC</strong> with AWS SAM/CloudFormation — no console drift.</li>
       </ul>
       <p class="envs"><span class="pill">eng ✅</span><span class="pill">test ✅</span><span class="pill">prod ✅</span></p>
+      <div class="metrics">
+      <ul class="metrics-list">
+        <li><strong>3</strong> environments with gated promotions (eng → test → prod)</li>
+        <li><strong>0</strong> long-lived CI keys (GitHub OIDC → AWS)</li>
+        <li><strong>100%</strong> IaC (SAM/CloudFormation), no console drift</li>
+        <li>Single-merge promotions; <strong>minutes</strong> to rollback via immutable artifacts</li>
+      </ul>
+</div>
+
     </section>
 
     <section class="section">
@@ -148,7 +160,9 @@
 
     <section class="section">
       <h3 class="kicker">🎯 Career Focus</h3>
-      <p>Open to roles in <strong>cloud-native product</strong>, <strong>cloud engineering</strong>, <strong>DevOps</strong>, or <strong>solutions architecture</strong>—especially SaaS, cybersecurity, and cloud infrastructure. I like small, sharp teams where shipping and reliability matter.</p>
+      <p>
+        Through projects like this portfolio, I’ve shown I can design and run AWS infrastructure as code, automate deployments, and build guardrails for cost and security. I’m looking for my first professional role in <strong>Cloud Engineering / DevOps / Solutions Architecture</strong>, where I can apply these skills in a team setting and continue growing into someone who owns pipelines and enables faster shipping.
+      </p>
     </section>
   </main>
 
